Bug 61842 - stderr variable is too generic
Summary: stderr variable is too generic
Status: RESOLVED FIXED
Alias: None
Product: colord
Classification: Unclassified
Component: daemon (show other bugs)
Version: unspecified
Hardware: All OpenBSD
: medium normal
Assignee: Richard Hughes
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-03-05 09:51 UTC by Antoine Jacoutot
Modified: 2013-03-05 10:29 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
stderr -> cd_stderr (1021 bytes, text/plain)
2013-03-05 09:51 UTC, Antoine Jacoutot
Details

Description Antoine Jacoutot 2013-03-05 09:51:52 UTC
Created attachment 75945 [details]
stderr -> cd_stderr

Hi.

On at least OpenBSD, stderr is defined in <stdio.h> which breaks the build of colord (0.1.30):

cd-main.c: In function 'cd_main_generate_profile':
cd-main.c:1126: error: expected identifier or '(' before '&' token
cd-main.c:1162: error: lvalue required as unary '&' operand
cd-main.c:1172: warning: format '%s' expects type 'char *', but argument 5 has type 'struct FILE *'

stderr being a very generic name for a variable, would it be possible to rename it to something like cd_stderr?

Thank you.
Comment 1 Richard Hughes 2013-03-05 10:29:58 UTC
commit e17d3f90a12e6ac002a3b0adb819fe0a88ff86f3
Author: Antoine Jacoutot <ajacoutot@openbsd.org>
Date:   Tue Mar 5 10:29:33 2013 +0000

    Fix build on OpenBSD
    
    Resolves: https://bugs.freedesktop.org/show_bug.cgi?id=61842
    Signed-off-by: Richard Hughes <richard@hughsie.com>


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.