Fix build on OpenBSD

Resolves: https://bugs.freedesktop.org/show_bug.cgi?id=61842
Signed-off-by: Richard Hughes <richard@hughsie.com>